Mon Dec  7 06:43:20 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c (rb_ary_sample): Fix infinite loop bug [ruby-core:27075]

Sat Dec  5 13:19:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: default ac_cv_prog_CC to CC.

Fri Dec  4 21:51:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (marshal_load): should set taintness.  [ruby-dev:39723]

Thu Dec  3 22:42:09 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/stringio/test_stringio.rb: use 1.8 methods for easier backport.

Thu Dec  3 22:20:51 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/stringio/test_stringio.rb: imported tests from trunk. it has 2
	  failures which can be fixed by backporting r17739 from trunk.

Wed Dec  2 17:32:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_invoke): unbound block created by define_method
	  cannot call super.  [ruby-core:26984]

Wed Dec  2 11:21:10 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* time.c (time_asctime): workaround for MSVCRT's bug.
	  backported from trunk (r18871).  ref [ruby-core:26992]

Tue Dec  1 18:00:12 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/digest/test_digest_extend.rb: added tests for digest framework.

Mon Nov 30 16:57:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (command_output): $makeflags are already quoted.

Mon Nov 30 16:54:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, win32/Makefile.sub (EXECUTABLE_EXTS): moved from
	  dln.c:dln_find_1().

	* lib/mkmf.rb (def find_executable0): use EXECUTABLE_EXTS, not
	  only EXEEXT.  [ruby-core:26821]

Thu Nov 26 00:01:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/digest/test_digest_extend.rb: Added tests for current digest
	  framework.

Wed Nov 25 19:32:25 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_instance_method_unimpl): Do not
	  call rb_inspect() on an object that does not implement necessary
	  methods; reported by NaHi.
